--- a/index.html
+++ b/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Fire Boy Water Girl</title>
     <style>
-        body {
-            margin: 0;
-            padding: 20px;
-            background-color: #202000;
-            min-height: 95vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        canvas {
-            border: 25px solid #776C2E;
-            display:block;
-        }
-    </style>   
-</head>
-<body>
-    <canvas id="canvas" width="800" height="600"></canvas>
-    <script src="js/game.js"></script>
-    <script src="js/background.js"></script>
-    <script src="js/platform.js"></script>
-    <script src="js/door.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/gem.js"></script>
-    <script src="js/index.js"></script>
-</body>
+      .game-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .game-title img {
+        max-width: 450px;
+        height: auto;
+      }
+      body {
+        margin: 0;
+        background-color: #202000;
+        min-height: 90vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      canvas {
+        border: 25px solid #776c2e;
+        display: block;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="game-container">
+      <div class="game-title">
+        <img src="images/gametitle.png" alt="Fire Boy & Water Girl" />
+      </div>
+      <canvas id="canvas" width="850" height="650"></canvas>
+      <script src="js/game.js"></script>
+      <script src="js/background.js"></script>
+      <script src="js/platform.js"></script>
+      <script src="js/door.js"></script>
+      <script src="js/player.js"></script>
+      <script src="js/gem.js"></script>
+      <script src="js/index.js"></script>
+    </div>
+  </body>
 </html>
