editted background and platform bricks

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       }
       body {
         margin: 0;
-        background-color: #202000;
+        background-color: black;
         min-height: 90vh;
         display: flex;
         justify-content: center;
         align-items: center;
       }
       canvas {
-        border: 25px solid #776c2e;
         display: block;
+        border:#5A522A solid 25px;
       }
     </style>
   </head>
@@ -32,14 +32,14 @@
       <div class="game-title">
         <img src="images/gametitle.png" alt="Fire Boy & Water Girl" />
       </div>
-      <canvas id="canvas" width="850" height="650"></canvas>
-      <script src="js/game.js"></script>
-      <script src="js/background.js"></script>
-      <script src="js/platform.js"></script>
-      <script src="js/door.js"></script>
-      <script src="js/player.js"></script>
-      <script src="js/gem.js"></script>
-      <script src="js/index.js"></script>
+        <canvas id="canvas" width="850" height="650"></canvas>
+        <script src="js/game.js"></script>
+        <script src="js/background.js"></script>
+        <script src="js/platform.js"></script>
+        <script src="js/door.js"></script>
+        <script src="js/player.js"></script>
+        <script src="js/gem.js"></script>
+        <script src="js/index.js"></script>
     </div>
   </body>
 </html>
