fixed player class and watergirl sprite

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         <script src="js/background.js"></script>
         <script src="js/platform.js"></script>
         <script src="js/door.js"></script>
-        <script src="js/player.js"></script>
         <script src="js/gem.js"></script>
+        <script src="js/player.js"></script>
+        <script src="js/waterGirl.js"></script>
+        <script src="js/fireBoy.js"></script>
         <script src="js/index.js"></script>
     </div>
   </body>
