--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
       canvas {
         display: block;
-        border:#5A522A solid 25px;
+        border:#5A522A solid 2px;
       }
     </style>
   </head>
@@ -32,9 +32,10 @@
       <div class="game-title">
         <img src="images/gametitle.png" alt="Fire Boy & Water Girl" />
       </div>
-        <canvas id="canvas" width="850" height="650"></canvas>
+        <canvas id="canvas" width="850" height="750"></canvas>
         <script src="js/game.js"></script>
         <script src="js/background.js"></script>
+        <script src="js/river.js"></script>
         <script src="js/platform.js"></script>
         <script src="js/door.js"></script>
         <script src="js/gem.js"></script>
