Buttons/Lever and bars done LESGO

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <script src="js/background.js"></script>
         <script src="js/river.js"></script>
         <script src="js/platform.js"></script>
+        <script src="js/bar.js"></script>
+        <script src="js/lever.js"></script>
+        <script src="js/button.js"></script>
+        <script src="js/buttonbar.js"></script>
         <script src="js/door.js"></script>
         <script src="js/gem.js"></script>
         <script src="js/player.js"></script>
