--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <script src="js/bar.js"></script>
         <script src="js/lever.js"></script>
         <script src="js/button.js"></script>
+        <script src="js/rock.js"></script>
         <script src="js/buttonbar.js"></script>
         <script src="js/door.js"></script>
         <script src="js/gem.js"></script>
