menu start page

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         align-items: center;
       }
 
-      .game-title img {
+      /* .game-title img {
         max-width: 450px;
         height: auto;
-      }
+      } */
       body {
         margin: 0;
         background-color: black;
-        min-height: 90vh;
+        min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -29,11 +29,12 @@
   </head>
   <body>
     <div class="game-container">
-      <div class="game-title">
+      <!-- <div class="game-title">
         <img src="images/gametitle.png" alt="Fire Boy & Water Girl" />
-      </div>
+      </div> -->
         <canvas id="canvas" width="850" height="750"></canvas>
         <script src="js/game.js"></script>
+        <script src="js/menu.js"></script>
         <script src="js/background.js"></script>
         <script src="js/river.js"></script>
         <script src="js/platform.js"></script>
