restart, score, level 2

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <canvas id="canvas" width="850" height="750"></canvas>
         <script src="js/game.js"></script>
         <script src="js/menu.js"></script>
+        <script src="js/restartManager.js"></script>
+        <script src="js/levelmanager.js"></script>
+        <script src="js/score.js"></script>
         <script src="js/background.js"></script>
         <script src="js/river.js"></script>
         <script src="js/platform.js"></script>
