refactor: replace button.js with buttons.js and update button handling; add new button images

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <script src="js/menu.js"></script>
         <script src="js/restartManager.js"></script>
         <script src="js/levelmanager.js"></script>
-        <script src="js/score.js"></script>
+        <script src="js/gameStateManager.js"></script>
+        <script src="js/scoreManager.js"></script>
         <script src="js/background.js"></script>
         <script src="js/river.js"></script>
         <script src="js/platform.js"></script>
-        <script src="js/bar.js"></script>
+        <script src="js/interactivePlatforms.js"></script>
         <script src="js/lever.js"></script>
-        <script src="js/button.js"></script>
+        <script src="js/buttons.js"></script>
         <script src="js/rock.js"></script>
-        <script src="js/buttonbar.js"></script>
         <script src="js/door.js"></script>
         <script src="js/gem.js"></script>
         <script src="js/player.js"></script>
