--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <canvas id="canvas" width="850" height="750"></canvas>
         <script src="js/game.js"></script>
         <script src="js/menu.js"></script>
-        <script src="js/restartManager.js"></script>
         <script src="js/levelmanager.js"></script>
+        <script src='js/restartManager.js'></script>
         <script src="js/gameStateManager.js"></script>
         <script src="js/scoreManager.js"></script>
         <script src="js/background.js"></script>
